--- a/css/services.css
+++ b/css/services.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0; /* Light background */
     color: #333; /* Standard text color */
+    background-color: #2c3e50;
 }
 
 .ccontainer {
