--- a/css/cprofile.css
+++ b/css/cprofile.css
@@ -2,7 +2,7 @@
     font-family: 'Times New Roman', serif; /* Changed to Times New Roman */
     margin: 0;
     padding: 0;
-    background-color: #2c3e50; /* Set background color to #2c3e50 */
+    background-color: #315374; /* Set background color to #2c3e50 */
 }
 
 .container {
