--- a/css/careers.css
+++ b/css/careers.css
@@ -1,7 +1,7 @@
-body {
+.bbody {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #2c3e50;
+    background-color: #315374;
     margin: 0;
     padding: 0;
     color: #333;
