--- a/css/support.css
+++ b/css/support.css
@@ -1,7 +1,7 @@
-body {
+.bbody {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.8;
-            background-color: #2c3e50;
+            background-color: #315374;
             margin: 0;
             padding: 0;
             color: #333;
